Update eip-7702 docs

--- a/docs/wallet/bundler/2-rpc-methods.mdx
+++ b/docs/wallet/bundler/2-rpc-methods.mdx
@@ -13,8 +13,9 @@ Bundler exposes standard ERC-4337 JSON-RPC API
 ## EntryPoint v0.8
 
 EIP-7702 support is added with with EntryPoint v0.8. The main ERC-4337 RPC call are `eth_estimateUserOperationGas` and `eth_sendUserOperation`, 
-which takes a UserOperation structure. In order to support EIP-7702, a new json element named `eip7702Auth`, to hold the eip-7702 auth tuple items. 
-The recovered address MUST be the sender of this UserOperation.
+which takes a UserOperation structure. In order to support EIP-7702, a new json element named `eip7702Auth`, to hold the eip-7702 auth tuple items.s
+
+The Bundler API for Entrypoint v0.8 is fully backword compatible and has no breaking changes from Entrypoint v0.7
 
 ### eth_sendUserOperation
 
