fix links to repo eip--702

--- a/docs/wallet/abstractionkit/3.paymaster.mdx
+++ b/docs/wallet/abstractionkit/3.paymaster.mdx
@@ -50,7 +50,7 @@ A `CandidePaymaster` is a class interacts with Candide's ERC-4337 Paymaster API.
 Supports:
 - Gas sponsorship through Gas Policies
 - ERC-20 Token Sponsorship
-- Multi-EntryPoins at `v0.6` and `v0.7`
+- Multi-EntryPoins
 
 ## Usage
 
