--- a/docs/wallet/guides/0-getting-started-eip-7702.mdx
+++ b/docs/wallet/guides/0-getting-started-eip-7702.mdx
@@ -67,7 +67,7 @@ main();
 
 ## Step 2: Generate Account Address
 
-To generate an account address, we will be using [Simple7702Account](https://github.com/eth-infinitism/account-abstraction/blob/develop/contracts/accounts/Simple7702Account.sol),
+To generate an account address, we will be using [Simple7702Account](/wallet/abstractionkit/simple-7702-account),
 a fully audited minimalist smart contract account that can be safely authorized by any EOA. It adds full support for major smart account features like batching and gas sponsorship.
 
 ```ts title="index.ts"
