--- a/docs/wallet/technical-reference/1.deployments.mdx
+++ b/docs/wallet/technical-reference/1.deployments.mdx
@@ -13,13 +13,18 @@ import { NetworkList } from "/src/components/NetworkList";
 
 ## Account Abstraction EntryPoint
 
-| Version               | Address                                    |
-| ----------------------| -------------------------------------------|
-| v0.6                  | 0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789 |
-| v0.7                  | 0x0000000071727De22E5E9d8BAf0edAc6f37da032 |
-| v0.8                  | 0x4337084D9E255Ff0702461CF8895CE9E3b5Ff108 |
+| Version               | Address                                    | Release |
+| ----------------------| -------------------------------------------|---------|
+| v0.8                  | 0x4337084D9E255Ff0702461CF8895CE9E3b5Ff108 |[eth-infinitism/account-abstraction/releases/tag/v0.8.0](https://github.com/eth-infinitism/account-abstraction/releases/tag/v0.8.0)|
+| v0.7                  | 0x0000000071727De22E5E9d8BAf0edAc6f37da032 |[eth-infinitism/account-abstraction/releases/tag/v0.7.0](https://github.com/eth-infinitism/account-abstraction/releases/tag/v0.8.0)|
+| v0.6                  | 0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789 |[eth-infinitism/account-abstraction/releases/tag/v0.6.0](https://github.com/eth-infinitism/account-abstraction/releases/tag/v0.8.0)|
 
-For EP smart contracts code and audits, refer to [eth-infinitism github](https://github.com/eth-infinitism/account-abstraction/releases).
+
+## Simple7702Account
+
+| Version               | Address                                    | Release |
+| ----------------------| -------------------------------------------|---------|
+| v0.8                  | 0xe6Cae83BdE06E4c305530e199D7217f42808555B | [eth-infinitism/account-abstraction/releases/tag/v0.8.0](https://github.com/eth-infinitism/account-abstraction/releases/tag/v0.8.0)|
 
 ## Candide Paymasters
 | Contract              | Address                                    |
