update batching and sponsorship guide for instagas

--- a/docs/dapps/getting-started.mdx
+++ b/docs/dapps/getting-started.mdx
@@ -21,14 +21,9 @@ import CardList from '/src/components/CardList';
 
 export const GETTING_STARTED_ITEMS = [
   {
-    title: 'Sponsor Gas',
-    description: 'Learn how to sponsor gas for your end-users with writing a single line of code',
-    route: '/dapps/guides/sponsor-gas',
-  },
-  {
-    title: 'Batch Transactions',
-    description: 'Learn how to send a bundle of transactions to improve your app experience',
-    route: '/dapps/guides/batch-transactions',
+    title: 'Batch & Sponsor Transactions',
+    description: 'Learn how to send a bundle of transactions to improve your app experience and sponsor gas',
+    route: '/instagas/batch-sponsor-transactions',
   },
   {
     title: 'Signature Verification',
