fix typos Co-authored-by: ncookie <ncukiert@gmail.com>

--- a/docs/instagas/6-batch-sponsor-transactions.mdx
+++ b/docs/instagas/6-batch-sponsor-transactions.mdx
@@ -1,6 +1,6 @@
 ---
 title: Batch & Sponsor
-description: Batch multiple multiple actions into a single on-chain transaction, and sponsor gas for your users -- reducing costs and enhancing your app UX
+description: Batch multiple actions into a single on-chain transaction, and sponsor gas for your users -- reducing costs and enhancing your app UX
 image: /img/batch-transactions_meta_screen.png
 keywords: [batch transactions, multicall, one-click, UX]
 ---
@@ -11,7 +11,7 @@ import { DataTable } from "/src/components/CustomTable";
 
 # Batch & Sponsor Transactions (ERC-5792)
  
-Batched transactionsa allows apps you to perform multiple transactions in one single on-chain transaction. If you are building a dapp, you communicate 
+Batched transactions allows apps you to perform multiple transactions in one single on-chain transaction. If you are building a dapp, you communicate 
 the actions to the wallet that the user performs. Instead of sending a single transaction one after the other, you can send an `array` of transactions, 
 and the wallet will execute the bundle. [ERC-5792](https://eips.ethereum.org/EIPS/eip-5792) standarizes the communication between the App and the Wallet.
 
