minor fixes and rename plugins to Safe plugins

--- a/docs/instagas/6-batch-sponsor-transactions.mdx
+++ b/docs/instagas/6-batch-sponsor-transactions.mdx
@@ -11,7 +11,7 @@ import { DataTable } from "/src/components/CustomTable";
 
 # Batch & Sponsor Transactions (ERC-5792)
  
-Batched transactions allows apps you to perform multiple transactions in one single on-chain transaction. If you are building a dapp, you communicate 
+Batched transactions allows apps to perform multiple actions in one single on-chain transaction. If you are building a dapp, you communicate 
 the actions to the wallet that the user performs. Instead of sending a single transaction one after the other, you can send an `array` of transactions, 
 and the wallet will execute the bundle. [ERC-5792](https://eips.ethereum.org/EIPS/eip-5792) standarizes the communication between the App and the Wallet.
 
