--- a/docs/instagas/6-batch-sponsor-transactions.mdx
+++ b/docs/instagas/6-batch-sponsor-transactions.mdx
@@ -38,6 +38,8 @@ The following apps and wallets support smart capabilities.
 
 * [Lido](https://lido.fi)
 * [revoke.cash](https://revoke.cash/)
+* [Lifi](https://li.fi/)
+
 
 ### Wallets
 
