fix useCallsStatus import

--- a/docs/instagas/6-batch-sponsor-transactions.mdx
+++ b/docs/instagas/6-batch-sponsor-transactions.mdx
@@ -197,7 +197,7 @@ try {
 Example using wagmi [useCallsStatus](https://wagmi.sh/react/api/hooks/useCallsStatus) hook
 
 ```ts
-import { useSendCalls } from 'wagmi/experimental'
+import { useCallsStatus } from 'wagmi/experimental'
 
 const { data: callStatusData, refetch: refetchCallStatus } = useCallsStatus({
     id: id as string,
